--- a/css/resume.css
+++ b/css/resume.css
@@ -56,7 +56,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #00bfff;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -131,17 +131,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #00bfff !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #00bfff !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #00bfff;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #00bfff;
 }
